--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Magra:wght@400;700&family=Playfair+Display:wght@600;700&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./fonts/gilroy/stylesheet.css">
-</head>
-<body>
-    
-
-</body>
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Magra:wght@400;700&family=Playfair+Display:wght@600;700&family=Red+Hat+Text:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./fonts/gilroy/stylesheet.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container-wide">
+        <div class="row space-between">
+          <div class="logo">MNTN</div>
+          <div class="nav">
+            <ul>
+              <li><a href="#">Equipment</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+          <a href="#" class="account">Account</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
