--- a/index.html
+++ b/index.html
@@ -38,5 +38,28 @@
         <p class="hero-scroll">scroll down</p>
       </a>
     </header>
+    <main>
+      <div class="container">
+        <article class="article">
+          <div class="article-text" data-number="01">
+            <div class="sub-title">GEt Started</div>
+            <div class="article-title">What level of hiker are you?</div>
+            <p>
+              Determining what level of hiker you are can be an important tool
+              when planning future hikes. This hiking level guide will help you
+              plan hikes according to different hike ratings set by various
+              websites like All Trails and Modern Hiker. What type of hiker are
+              you – novice, moderate, advanced moderate, expert, or expert
+              backpacker?
+            </p>
+
+            <div class="article-read-more">read more</div>
+          </div>
+          <div class="article-img">
+            <img src="./img/pic1.jpg" alt="photo" />
+          </div>
+        </article>
+      </div>
+    </main>
   </body>
 </html>
