--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="hero-scroll">scroll down</p>
       </a>
     </header>
-    <main>
+    <main class="main">
       <div class="container">
         <article class="article">
           <div class="article-text" data-number="01">
@@ -57,6 +57,35 @@
           </div>
           <div class="article-img">
             <img src="./img/pic1.jpg" alt="photo" />
+          </div>
+        </article>
+        <article class="article">
+          <div class="article-text" data-number="02">
+            <div class="sub-title">Hiking Essentials</div>
+            <div class="article-title">Picking the right Hiking Gear!</div>
+            <p>
+              The nice thing about beginning hiking is that you don't really need any special gear, you can probably get away with things you already have.
+Let's start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.
+            </p>
+
+            <div class="article-read-more">read more</div>
+          </div>
+          <div class="article-img">
+            <img src="./img/pic2.jpg" alt="photo" />
+          </div>
+        </article>
+        <article class="article">
+          <div class="article-text" data-number="03">
+            <div class="sub-title">where you go is the key</div>
+            <div class="article-title">Understand Your Map & Timing</div>
+            <p>
+              To start, print out the hiking guide and map. If it's raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I'll read the guide and know that say, in a mile, I make a right turn at the junction..
+            </p>
+
+            <div class="article-read-more">read more</div>
+          </div>
+          <div class="article-img">
+            <img src="./img/pic3.jpg" alt="photo" />
           </div>
         </article>
       </div>
