--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="nav-wrapper">
         <div class="container-wide">
           <div class="row space-between">
-            <div class="logo">MNTN</div>
+            <h2 class="logo">MNTN</h2>
             <div class="nav">
               <ul>
                 <li><a href="#">Equipment</a></li>
@@ -43,7 +43,7 @@
         <article class="article">
           <div class="article-text" data-number="01">
             <div class="sub-title">GEt Started</div>
-            <div class="article-title">What level of hiker are you?</div>
+            <h2 class="article-title">What level of hiker are you?</h2>
             <p>
               Determining what level of hiker you are can be an important tool
               when planning future hikes. This hiking level guide will help you
@@ -53,7 +53,7 @@
               backpacker?
             </p>
 
-            <div class="article-read-more">read more</div>
+            <a href="#" class="article-read-more">read more</a>
           </div>
           <div class="article-img">
             <img src="./img/pic1.jpg" alt="photo" />
@@ -62,13 +62,16 @@
         <article class="article">
           <div class="article-text" data-number="02">
             <div class="sub-title">Hiking Essentials</div>
-            <div class="article-title">Picking the right Hiking Gear!</div>
+            <h2 class="article-title">Picking the right Hiking Gear!</h2>
             <p>
-              The nice thing about beginning hiking is that you don't really need any special gear, you can probably get away with things you already have.
-Let's start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.
+              The nice thing about beginning hiking is that you don't really
+              need any special gear, you can probably get away with things you
+              already have. Let's start with clothing. A typical mistake hiking
+              beginners make is wearing jeans and regular clothes, which will
+              get heavy and chafe wif they get sweaty or wet.
             </p>
 
-            <div class="article-read-more">read more</div>
+            <a href="#" class="article-read-more">read more</a>
           </div>
           <div class="article-img">
             <img src="./img/pic2.jpg" alt="photo" />
@@ -77,12 +80,16 @@ Let's start with clothing. A typical mistake hiking beginners make is wearing je
         <article class="article">
           <div class="article-text" data-number="03">
             <div class="sub-title">where you go is the key</div>
-            <div class="article-title">Understand Your Map & Timing</div>
+            <h2 class="article-title">Understand Your Map & Timing</h2>
             <p>
-              To start, print out the hiking guide and map. If it's raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I'll read the guide and know that say, in a mile, I make a right turn at the junction..
+              To start, print out the hiking guide and map. If it's raining,
+              throw them in a Zip-Lock bag. Read over the guide, study the map,
+              and have a good idea of what to expect. I like to know what my
+              next landmark is as I hike. For example, I'll read the guide and
+              know that say, in a mile, I make a right turn at the junction..
             </p>
 
-            <div class="article-read-more">read more</div>
+            <a href="#" class="article-read-more">read more</a>
           </div>
           <div class="article-img">
             <img src="./img/pic3.jpg" alt="photo" />
@@ -90,5 +97,43 @@ Let's start with clothing. A typical mistake hiking beginners make is wearing je
         </article>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row space-between">
+        <div class="footer-copyright">
+          <div class="footer-copyright-logo">
+            <div class="logo">MNTN</div>
+          </div>
+          <p class="footer-copyight-desc">
+            Get out there & discover your next slope, mountain & destination!
+          </p>
+          <p class="footer-copyright-terms">
+            Copyright 2019 MNTN, Inc. Terms & Privacy
+          </p>
+        </div>
+        <div class="footer-nav-wrapper">
+          <div class="footer-nav">
+            <h4 class="footer-nav-title">More on The Blog</h4>
+            <ul>
+              <li><a href="#">About MNTN</a></li>
+              <li><a href="#">Contributors & Writers</a></li>
+              <li><a href="#">Write for Us</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav">
+            <h4 class="footer-nav-title">More on MNTN</h4>
+            <ul>
+              <li><a href="#">The Team</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
